# kopete

./: README  proposal.md
plugins/: CMakeLists.txt
plugins/history/: CMakeLists.txt  chathistoryhandler.cpp  chathistoryhandler.h  chathistoryplugin.cpp  chathistoryplugin.h  databaseconstants.cpp  databaseconstants.h  databasemanager.cpp  databasemanager.h  historybrowser.cpp  historybrowser.h  historybrowser.ui  historyconfig.kcfg  historyplugin.cpp  historyplugin.h  historypreferences.cpp  historypreferences.h  historypreferencesui.ui  historyui.rc  kopete_history.desktop  kopete_history_config.desktop  querybuilder.cpp  querybuilder.h
plugins/history3/: CMakeLists.txt  History3Logger.cpp  History3Logger.h  chathistoryhandler.cpp  chathistoryhandler.h  databasehelper.cpp  databasehelper.h  databaselogger.cpp  databaselogger.h  databasemanager.cpp  databasemanager.h  history3config.kcfg  history3config.kcfgc  history3plugin.cpp  history3plugin.h  kopete_history3.desktop  kopete_history3_config.desktop
